--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ subjects:
 - !lcsh 'Science fiction'
 - !lcsh 'Great Britain -- Social life and customs -- Fiction'
 - !lcc 'PR'
+- GITenberg
 tableOfContents: The Plattner story -- The Argonauts of the air -- The story of the
   late Mr. Elvesham -- In the abyss -- The apple -- Under the knife -- The sea-raiders
   -- Pollock and the Porroh man -- The red room -- The cone -- The purple pileus --
